--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abel Mekuriya - Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Abel Mekuriya.</a>
+        <a class="navbar-brand" href="#">Abel Mekuriya</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,10 +26,9 @@
 
     <header class="jumbotron text-center">
         <h1 class="display-4 header-title">Hello, I'm Abel Mekuriya</h1>
-        <p class="lead header-subtitle">  Software engineering student and 
-            Headstarter AI 
-            Incoming Software Engineering Fellow at Headstarter AI</p>
-    </header>
+        <p class="lead header-subtitle">Software engineering student at ASTU and 
+            
+            Incoming Software Engineering Fellow at Headstarter AI</header>
 
     <section id="about" class="container mt-5">
         <h2>About Me</h2>
@@ -55,11 +54,28 @@
                     <img src="images/project1.jpg" class="card-img-top" alt="Project 1">
                     <div class="card-body">
                         <h5 class="card-title">Project 1</h5>
-                        <p class="card-text">A Telegram Mini App Game using react and vercel to deploy it in to the web.</p>
+                        <p class="card-text">Description of Project 1.</p>
                     </div>
                 </div>
             </div>
-            
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="images/todo.png" class="card-img-top" alt="Project 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 2</h5>
+                        <p class="card-text">A Todo web app using Html, css and JavaScript.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="images/calc.png" class="card-img-top" alt="Project 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 3</h5>
+                        <p class="card-text">Simple calculator using Html, css and JavaScript.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
